2007-08-31  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Editors/_EditPerson.py: bug, save(self, obj) to save(self, *obj)

2007-08-31  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/PlaceUtils.py: request #1199

2007-08-31  Stephane Charette  <stephanecharette@gmail.com>
	* src/Filters/Rules/_HasReferenceCountBase.py: move some filter code
	from ::apply() into ::prepare() to ensure it executes only once

2007-08-30  Don Allingham  <don@gramps-project.org>
	* src/BasicUtils/_UpdateCallback.py: add support for text in progressbar
	* src/ExportAssistant.py: add support for text in progressbar
	* src/ExportOptions.py: add support for text in progressbar
	* src/GrampsDbUtils/_WriteGedcom.py: add support for text in progressbar
	
2007-08-30  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDBDir.py: use types.InstanceType
	* src/RelLib/_SourceBase.py: use types.InstanceType
	* src/RelLib/_Source.py: use types.InstanceType
	* src/RelLib/_MediaObject.py: use types.InstanceType
	* src/RelLib/_Person.py: use types.InstanceType
	* src/RelLib/_DateBase.py: use types.InstanceType
	* src/RelLib/_ChildRef.py: use types.InstanceType
	* src/RelLib/_Family.py: use types.InstanceType
	* src/RelLib/_Place.py: use types.InstanceType
	* src/RelLib/_RepoRef.py: use types.InstanceType
	* src/RelLib/_Note.py: use types.InstanceType
	* src/RelLib/_EventRef.py: use types.InstanceType
	* src/RelLib/_Repository.py: use types.InstanceType
	* src/RelLib/_Event.py: use types.InstanceType

2007-08-30  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/ExportAssistant.py: request Don, progressbar in exportassistant.

2007-08-30  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Editors/_EditPrimary.py : refractoring
	* src/Editors/_EditPerson.py  :  refractoring
	* src/Editors/_EditFamily.py  : family quick reports
	* src/DataViews/_FamilyList.py: family quick reports
	* src/PageView.py             : family quick reports