@@ -1,3 +1,7 @@
+2007-08-31  Don Allingham  <don@gramps-project.org>
+	* src/ExportAssistant.py (ExportAssistant.pulse_progressbar): fix 
+	display value, crashed if text wasn't specified
+
 2007-08-31  Benny Malengier <benny.malengier@gramps-project.org> 
 	* src/Editors/_EditPerson.py: bug, save(self, obj) to save(self, *obj)
 
